--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -218,10 +218,11 @@ import Footer from '../../components/en_components/Footer.astro'
 			line-height: normal;
 			padding-left: 3.5%;
 		}
-
+	
 		#kalendarz-container {
 			background: url(../../assets/tlo-kalendarz.png) lightgray 50% / cover no-repeat;
 		}
+
 		.wydarzenia {
 			display: flex;
 			justify-content: space-between;
@@ -276,7 +277,7 @@ import Footer from '../../components/en_components/Footer.astro'
 		}
 		#second-quote-main > div > a {
 			color: #032D52;
-			font-family: "Gilda Display";
+			font-family: "Gilda Display";	
 			font-size: 1.5vw;
 			font-style: normal;
 			font-weight: 400;
@@ -307,7 +308,6 @@ import Footer from '../../components/en_components/Footer.astro'
 			#o-nas-containter {
 				grid-column: 1/4;
 			}
-
 
 			#o-nas {
 				position: relative; 
@@ -348,10 +348,12 @@ import Footer from '../../components/en_components/Footer.astro'
 
 			/* Second quote iphone */
 			#second-quote-main {
-				grid-row: 7 / 8;
+				grid-row: 5 / 6;
 				flex-direction: column-reverse;
-				/* grid-template-columns: 1fr;
-				grid-template-rows: 1fr 1fr; */
+				height: fit-content;
+			}
+			#second-purple-quote {
+				height: 500px;
 			}
 			#second-quote-main > img {
 				height: 114vw;
@@ -371,6 +373,18 @@ import Footer from '../../components/en_components/Footer.astro'
 			#fantastica-glowna {
 				grid-template-rows: 110vh 70.1% 100vh 1fr 1fr;
 			}
+			#main-readable-portion {        
+				grid-template-rows: 10vh 1250px 82vh calc(820px + 114vw) calc(515px + 114vw);
+			}
+			#first-photo-text-container > p {
+				font-size: 2.7rem;
+			}
+			#kalendarz-container {
+				height: -webkit-fill-available;
+			}
+			#kalendarz-container > div {
+				height: -webkit-fill-available;
+			}
 			.fantastica-big-letters {
 				align-self: start;
 				top: 23%;
@@ -379,10 +393,14 @@ import Footer from '../../components/en_components/Footer.astro'
 				font-size: 12.5vw;
 				/* align-items: start; */
 			}
-			.falanding {
-				
-				/* left: auto;
-				top: 21vh; */
+			#second-quote-main > div > h2 {
+				font-size: 7.3vw;
+			}
+			#second-quote-main > div > h4 {
+				font-size: 3.4vw;
+			}
+			#second-quote-main > div > a {
+				font-size: 3.8vw;
 			}
 
 /* TODO - wazne, na glownej za male literki w tym */
