--- a/src/components/en_components/Wydarzenie-przyszle.astro
+++ b/src/components/en_components/Wydarzenie-przyszle.astro
@@ -59,7 +59,7 @@
         <p class="data-wydarzenia-dzien">5</p>
         <p class="data-wydarzenia-m-r">Oct<br>2025</p>
     </div>
-    <a style="margin-left: 22px;" class="nazwa-wydarzenia">La Stella</a>
+    <a id="lastella" class="nazwa-wydarzenia">La Stella</a>
     <a class="opis-wydarzenia">Festival of Silent Music</a>
     <a class="miejsce-wydarzenia">Toruń, PL</a>
     <a class="czas-wydarzenia">19:00</a>
@@ -113,6 +113,9 @@
         .nazwa-wydarzenia {
             flex-basis: 100px;
         }
+        #lastella {
+            margin-left: 22px;
+        }
         .opis-wydarzenia {
             flex-basis: 200px;
         }
@@ -132,5 +135,39 @@
             .opis-wydarzenia {
                 flex-basis: 180px;
             }
+        }
+        @media screen and (max-width: 600px) {
+            .wydarzenie {
+                display: grid;
+                grid-template-columns: 1.1fr 1fr 1fr;
+                grid-template-rows: 33px 33px;
+                height: 66px;
+                width: 97%;
+                padding-bottom: 0.9vh;
+            }
+            .data-wydarzenia {
+                grid-column: 1/2;
+                grid-row: 1/3;
+            }
+            .nazwa-wydarzenia {
+                grid-column: 2/3;
+                grid-row: 1/2;
+            }
+            .czas-wydarzenia {
+                grid-column: 3/4;
+                grid-row: 1/2;
+            }
+            .opis-wydarzenia {
+                grid-column: 2/3;
+                grid-row: 2/3;
+            }
+            .miejsce-wydarzenia {
+                grid-column: 3/4;
+                grid-row: 2/3;
+                text-align: right;
+            }
+        #lastella {
+            margin-left: 0;
+        }
         }
 </style>
