--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -622,7 +622,7 @@ import Footer from '../components/Footer.astro'
 /* about 6 - klaudia 2 - mobilne */
     .about-6-inside {
         flex-direction: column-reverse;
-
+        width: 100vw;
     }
     .sideways-text-and-text {
         margin-top: 0;
