--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -632,6 +632,7 @@ We perform on both national and European stages, appearing in Poland, Austria, F
 /* about 6 - klaudia 2 - mobilne */
     .about-6-inside {
         flex-direction: column-reverse;
+        width: 100vw;
 
     }
     .sideways-text-and-text {
