Kontakt: proba naprawy responsywnosci

--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -226,5 +226,10 @@ import igIcon from '../assets/ig-kontakt.svg';
             column-gap: 17px;
         }
     }
+    @media screen and (max-height: 670px) {
+        .kontakt-container {
+            grid-template-rows: 30vh 1fr;
+        }
+    }
 
 </style>
