--- a/src/components/en_components/Kontakt_cmpnt.astro
+++ b/src/components/en_components/Kontakt_cmpnt.astro
@@ -225,5 +225,9 @@ import igIcon from '../../assets/ig-kontakt.svg';
             column-gap: 17px;
         }
     }
-
+    @media screen and (max-height: 670px) {
+        .kontakt-container {
+            grid-template-rows: 30vh 1fr;
+        }
+    }
 </style>
