--- a/src/components/en_components/Kontakt_cmpnt.astro
+++ b/src/components/en_components/Kontakt_cmpnt.astro
@@ -227,7 +227,11 @@ import igIcon from '../../assets/ig-kontakt.svg';
     }
     @media screen and (max-height: 670px) {
         .kontakt-container {
-            grid-template-rows: 30vh 1fr;
+            grid-template-rows: 38vh 1fr;
+        }
+
+        .kontakt > h3 {
+            margin-top: 4vh;
         }
     }
 </style>
