--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -232,7 +232,7 @@ import igIcon from '../assets/ig-kontakt.svg';
         }
 
         .kontakt > h3 {
-            margin-top: 4vh;
+            margin-top: 0;
         }
     }
 
