--- a/src/components/en_components/Kontakt_cmpnt.astro
+++ b/src/components/en_components/Kontakt_cmpnt.astro
@@ -231,7 +231,7 @@ import igIcon from '../../assets/ig-kontakt.svg';
         }
 
         .kontakt > h3 {
-            margin-top: 4vh;
+            margin-top: 0;
         }
     }
 </style>
