kontakt: znowu proba2

--- a/src/components/en_components/Kontakt_cmpnt.astro
+++ b/src/components/en_components/Kontakt_cmpnt.astro
@@ -226,12 +226,16 @@ import igIcon from '../../assets/ig-kontakt.svg';
         }
     }
     @media screen and (max-height: 670px) {
+        .heading-kontakt {
+            align-self: center;
+        }
         .kontakt-container {
-            grid-template-rows: 38vh 1fr;
+            grid-template-rows: 36vh 1fr;
         }
 
         .kontakt > h3 {
-            margin-top: 0;
+            margin-top: 1vh;
         }
     }
+    
 </style>
