O-nas: super respnsywnosc

--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -508,7 +508,7 @@ We perform on both national and European stages, appearing in Poland, Austria, F
 /* Mobilna O nas */
 @media screen and (max-width: 800px) {
     .about-container {
-        grid-template-rows: 1fr 1fr 1fr 100vh 360vw 1fr 1fr calc(20px + 42vh);
+        grid-template-rows: 1fr 1fr 1fr 780px 360vw 1fr 1fr calc(20px + 42vh);
     }
     .about-content-1 {
         flex-direction: column;    
@@ -594,9 +594,20 @@ We perform on both national and European stages, appearing in Poland, Austria, F
     }
     .owczarek-test-bottom {
         text-align: justify;
-        width: 69vw;    
+        width: 68vw;    
         font-size: calc(13px + 0.5vw);
         
+    }
+    .about-content-4-aleksandra-container-inside {
+        grid-template-columns: 1fr 75vw;
+
+    }
+
+    .about-content-4-aleksandra-tag{
+        font-size: 92px;
+        text-align: center;
+        width: 92px;
+        margin-left: 2.7vw;
     }
 /* About 5 klaudia - mobilne */
     .about-content-5-klaudia {
