Glowna: mini naprawa responsywnosci ale nie bo jest ponad 100% szerokosci

--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -69,15 +69,15 @@ import plytyBiberDots from '../assets/plyty-biber-dots.png'
 
     .albumy-container {
         display: grid;
-        grid-template-columns: 99vw;
-        grid-template-rows: 43vw 78vw 60vw 78vw;
+        grid-template-columns: 100vw;
+        grid-template-rows: 730px 78vw 60vw 78vw;
         font-weight: 400;
         font-family: "Gilda Display";
         
     }
     /* Projekty Headline */
     .albumy-headline {
-        width: 99vw;
+        width: 100vw;
         grid-row: 1/2;
         display: grid;
         grid-template-columns: 50vw 50vw;
@@ -129,7 +129,7 @@ import plytyBiberDots from '../assets/plyty-biber-dots.png'
     .albumy-biber-container {
         display: grid;
         grid-template-rows: 1fr;
-        width: 99vw;
+        width: 100vw;
         }
     
     .albumy-biber-up {
