--- a/src/components/Glowna_cmpnt3.astro
+++ b/src/components/Glowna_cmpnt3.astro
@@ -75,7 +75,7 @@ import vidoo from '../assets/fantastica-vid.mp4';
 				position: absolute;
 				height: 100vh;
 				z-index: -2;
-				width: 100vw;
+				width: 100%;
 				object-fit: cover;
 			}
 
@@ -90,7 +90,7 @@ import vidoo from '../assets/fantastica-vid.mp4';
 			position: absolute;
 			height: 100vh;
 			z-index: -3;
-			width: 100vw;
+			width: 100%;
 			object-fit: cover;
 		}
 
