--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,4 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
 import Header from '../components/Header.astro';
 // TODO - WAZNE - to nie dziala na oficjalnym serwerze
 const pageTitles = {
@@ -42,16 +41,9 @@ const title = pageTitles[currentPath as keyof typeof pageTitles] || 'Fantastica'
 		<link href="https://fonts.googleapis.com/css2?family=Elsie:wght@400;900&family=Gilda+Display&display=swap" rel="stylesheet">
 		<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
 		<title>{title}</title>
-		<ViewTransitions />    
-		<style is:global>
-			/* Disable transition animations during language switch */
-			[data-astro-transition-fallback] {
-			  animation: none !important;
-			}
-		  </style>
 	</head>
 	<body>
-		<Header animate:persist />
+		<Header />
 		<slot />
 	</body>
 </html>
