--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -4,7 +4,11 @@ import plytyEclipse from '../assets/plytyEclipseLol.png';
 import plytyBiber from '../assets/plytyBiber.png';
 import plytyBiber2 from '../assets/plytyBiber2.png'
 import plytyBiberDots from '../assets/plyty-biber-dots.png'
+import { ViewTransitions } from "astro:transitions";
 ---
+<head>
+    <ViewTransitions />
+</head>
 
 <div class="albumy-container">
     <div class="albumy-headline">
