--- a/src/components/en_components/Projekty_cmpnt.astro
+++ b/src/components/en_components/Projekty_cmpnt.astro
@@ -7,7 +7,11 @@ import eclipseProjekty from '../../assets/eclipseProjekty.svg';
 import projekt2img from '../../assets/projekt2img.png';
 import projekt3img from '../../assets/projekt3img.png';
 import projekt4img from '../../assets/projekt4img.png';
+import { ViewTransitions } from "astro:transitions";
 ---
+<head>
+    <ViewTransitions />
+</head>
 <!-- TODO - 2 nie ma kolek na nazwach -->
 <div class="projekty-container">
     <!-- TODO - lepszy scaling (chcialbym zeby to zdjecie sie lepiej skalowalo), i moze background animated gradient, font weight jest dziwny -->
