--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -25,7 +25,11 @@ import gallery15 from '../assets/galeria/gallery15.png';
 import gallery16 from '../assets/galeria/gallery16.png';
 import gallery17 from '../assets/galeria/gallery17.png';
 import gallery18 from '../assets/galeria/gallery18.png';
+import { ViewTransitions } from "astro:transitions";
 ---
+<head>
+    <ViewTransitions />
+</head>
 <div class="about-container">
     <div class="about-content-1-bg"></div>
     <div class="about-content-1">
