--- a/src/components/en_components/Kontakt_cmpnt.astro
+++ b/src/components/en_components/Kontakt_cmpnt.astro
@@ -2,7 +2,11 @@
 import kontaktImg from '../../assets/kontakt.png';
 import fbIcon from '../../assets/fb_icon.svg';
 import igIcon from '../../assets/ig-kontakt.svg';
+import { ViewTransitions } from "astro:transitions";
 ---
+<head>
+    <ViewTransitions />
+</head>
 <div class="kontakt-container">
     <div class="heading-kontakt">
         <h1>Do you want to collaborate with us?</h1>
