--- a/src/components/en_components/Footer.astro
+++ b/src/components/en_components/Footer.astro
@@ -17,7 +17,7 @@ import ytIcon from '../../assets/yt_icon.svg';
         </div>
         <div class="footer-right">
             <h3>Contact</h3>
-            <a id="emailson" href="mailto:fantastica.ensemble@gmail.com">fantastica.ensemble@gmail.com</a>
+            <a id="emailson" href="mailto:fantastica.ensemble@gmail.com" data-astro-reload>fantastica.ensemble@gmail.com</a>
             <div class="footer-social-icons">
                 <a href="https://www.youtube.com/@owczarekobodaduo3746" class="footer-right-icon-container"><img class="footer-right-icon" src={ytIcon.src} alt="youtube" /> <span>youtube</span></a>
                 <a href="https://www.instagram.com/fantastica.ensemble/" class="footer-right-icon-container"><img class="footer-right-icon" src={igIcon.src} alt="instagram" /> <span>instagram</span></a>
