--- a/src/components/en_components/Projekty_cmpnt.astro
+++ b/src/components/en_components/Projekty_cmpnt.astro
@@ -190,6 +190,7 @@ import { ViewTransitions } from "astro:transitions";
         height: auto;
         align-content: end;    
         padding-top: 16vh;
+        background-size: cover;
     }
 
     .projektyHeadlineImg {
