jakies mini fixy

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,9 +19,9 @@ import ytIcon from '../assets/yt_icon.svg';
             <h3>Kontakt</h3>
             <a id="emailson" href="mailto:fantastica.ensemble@gmail.com" data-astro-reload>fantastica.ensemble@gmail.com</a>
             <div class="footer-social-icons">
-                <a href="https://www.youtube.com/@owczarekobodaduo3746" class="footer-right-icon-container"><img class="footer-right-icon" src={ytIcon.src} alt="youtube" /> <span>youtube</span></a>
-                <a href="https://www.instagram.com/fantastica.ensemble/" class="footer-right-icon-container"><img class="footer-right-icon" src={igIcon.src} alt="instagram" /> <span>instagram</span></a>
-                <a href="https://www.facebook.com/fantastica.ensemble" class="footer-right-icon-container"><img class="footer-right-icon" src={fbIcon.src} alt="facebook" /> <span>facebook</span></a>
+                <a href="https://www.youtube.com/@owczarekobodaduo3746" class="footer-right-icon-container"><img class="footer-right-icon" src={ytIcon.src} alt="youtube" loading="lazy" decoding="async"/> <span>youtube</span></a>
+                <a href="https://www.instagram.com/fantastica.ensemble/" class="footer-right-icon-container"><img class="footer-right-icon" src={igIcon.src} alt="instagram" loading="lazy" decoding="async"/> <span>instagram</span></a>
+                <a href="https://www.facebook.com/fantastica.ensemble" class="footer-right-icon-container"><img class="footer-right-icon" src={fbIcon.src} alt="facebook" loading="lazy" decoding="async"/> <span>facebook</span></a>
             </div>
         </div>
     </div>
