--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -54,7 +54,7 @@ import Footer from '../../components/en_components/Footer.astro'
 				</div>
 			</div>
 			<div id="second-quote-main">
-				<img src={secondPhotoMain.src} alt="" />
+				<img src={secondPhotoMain.src} alt="Photo of Klaudia and Aleksandra with second quote" loading="lazy" decoding="async"/>
 				<div>
 					<h2>“Revolutionizing the world of Baroque music with their innovative approach.”</h2>
 					<h4>Autorka<br>Karolina Sajniak-Drzyzga
