--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -244,6 +244,7 @@ import { ViewTransitions } from "astro:transitions";
 
 
     .about-1-eclipse {
+        height: auto;
         position: absolute;
         right: 0;
         top: 0;
