--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -253,6 +253,7 @@ We perform on both national and European stages, appearing in Poland, Austria, F
 
 
     .about-1-eclipse {
+        height: auto;
         position: absolute;
         right: 0;
         top: 0;
