Naprawa o-nas pls

--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -325,7 +325,9 @@ import { ViewTransitions } from "astro:transitions";
         text-align: right;
 
     }
-    
+    .about-content-3-aleksandra-inside-text p {
+        text-align: justify;
+    }
     #about-3-aleksandra-inside-text-left {
         flex: display;
     }
@@ -334,6 +336,7 @@ import { ViewTransitions } from "astro:transitions";
         font-size: calc(16px + 0.1vw);
         margin-right: calc(26vw - 340px);
         align-self: center;
+        text-align: justify;
     }
 
     #about-3-aleksandra-img {
@@ -410,7 +413,8 @@ import { ViewTransitions } from "astro:transitions";
     }
     
     #about-5-klaudia-img {
-        width: fit-content;
+        /* TODO - 3 chyba psuje telefon */
+        /* width: fit-content; */
         height: calc(120px + 25vw);
     }
     #about-5-klaudia-inside-text-left {
