--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -17,7 +17,7 @@ import gallery7 from '../../assets/galeria/gallery7.png';
 import gallery8 from '../../assets/galeria/gallery8.png';
 import gallery9 from '../../assets/galeria/gallery9.png';
 import gallery10 from '../../assets/galeria/gallery10.png';
-import gallery11 from '../../assets/galeria/gallery11.png';
+import gallery11 from '../../assets/galeria/gallery11.png';x
 import gallery12 from '../../assets/galeria/gallery12.png';
 import gallery13 from '../../assets/galeria/gallery13.png';
 import gallery14 from '../../assets/galeria/gallery14.png';
