--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -27,9 +27,9 @@ import gallery17 from '../../assets/galeria/gallery17.png';
 import gallery18 from '../../assets/galeria/gallery18.png';
 import { ViewTransitions } from "astro:transitions";
 ---
-<!-- <head>
+<head>
     <ViewTransitions />
-</head> -->
+</head>
 <!-- TODO - 2 nie ma niektorych zdjec -->
 <div class="about-container">
     <div class="about-content-1-bg"></div>
