Naprawa o-nas pls3

--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -416,6 +416,7 @@ import { ViewTransitions } from "astro:transitions";
         /* TODO - 3 chyba psuje telefon */
         /* width: fit-content; */
         height: calc(120px + 25vw);
+        width: fit-content;
     }
     #about-5-klaudia-inside-text-left {
         flex: display;
@@ -594,13 +595,6 @@ import { ViewTransitions } from "astro:transitions";
         box-shadow: 0 5em 2em #111;
         /* cursor: pointer; */
     }
-
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
 
 
 
