Footer: przycisk animation

--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -174,7 +174,7 @@ import { ViewTransitions } from "astro:transitions";
         </div>
     </div>
     <div id="footerson-about">
-        <Footer />
+        <Footer animate:persist />
     </div>
 </div>
 <style>
