--- a/src/pages/en/CD.astro
+++ b/src/pages/en/CD.astro
@@ -6,5 +6,5 @@ import Footer from '../../components/en_components/Footer.astro';
 
 <Layout>
 	<Plyty_cmpnt />
-	<Footer />
+	<Footer animate:persist/>
 </Layout>
