--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,9 +10,14 @@ import ytIcon from '../assets/yt_icon.svg';
         <div class="footer-left">
             <h2>DOŁĄCZ DO NAS</h2>
             <p id="pod-dolacz">i wejdź z nami do świata muzyki</p>
-            <form action="https://buttondown.email/api/emails/embed-subscribe/szymon" method="post">
-                            <input type="email" name="email" placeholder="E-mail" required>
-            <button type="submit" value="Subscribe">ZAPISZ SIĘ</button>
+            <form id="newsletter-input" action="https://buttondown.email/api/emails/embed-subscribe/szymon" method="post">
+                            <input id="newsletter-input-email" type="email" name="email" placeholder="E-mail" required>
+            <!-- <button type="submit" value="Subscribe">ZAPISZ SIĘ</button> -->
+            <button class="btn" type="submit" value="Subscribe">
+                <p id="btn-txt" style="position: absolute; z-index: 6;">     
+                    ZAPISZ SIĘ 
+                <p/>
+              </button>
         </form>
         </div>
         <div class="footer-right">
@@ -72,8 +77,112 @@ import ytIcon from '../assets/yt_icon.svg';
         width: calc(62vw - 355px);
         outline: none;
     }
+    #newsletter-input {
+        display: flex;
+    }
+    #newsletter-input-email{
+        margin-right: 2vw;
+    }
+/* PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE */
+.btn {
+  background: black;
+  border: 1px solid #e0e0e0;
+  outline: none;
+  width: 155px;
+  padding: 12px 40px;
+  height: 60px;
+  border-radius: 3px;
+  overflow: hidden;
+  transform: scaleX(1);
+  transition: transform 0.5s cubic-bezier(0.4, 0, 0, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;  
+}
+#btn-txt{
+  color: white;
+  width: 100%;
+  height: 100%;
+  text-align: center;  
+  transition: all 0.3s ease;
+  font-size: 15px;
+  padding-top: 41px;
+}
+#btn-txt:hover {
+  color: black;
+}
+.btn:hover {
+  animation: animate-scaleX 0.6s cubic-bezier(0.4, 0, 0, 1);
+  background: transparent;
+  color: black;
+}
 
-    .footer-left button {
+.btn::after {
+  color: black;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: white;
+  transition: transform 0.5s cubic-bezier(0.4, 0, 0, 1),
+    border-radius 0.5s cubic-bezier(0.4, 0, 0, 1);
+  width: 100%;
+  height: 100%;
+  border-radius: 50% 50% 0 0;
+  transform: translateY(100%);
+}
+
+.btn:hover::after {
+  transform: translateY(0%);
+  border-radius: 0;
+}
+
+.btn span {
+  font-size: 20px;
+  font-weight: 500;
+  overflow: hidden;
+  position: relative;
+  color: white;
+}
+
+.btn span:after {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s cubic-bezier(0.4, 0, 0, 1);
+  content: attr(data-text);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  z-index: 1;
+  transform: translate(-50%, 100%);
+  color: black;
+}
+.btn:hover span:after {
+  transform: translate(-50%, 0);
+}
+
+.btn:focus {
+  outline: none;
+}
+
+@keyframes animate-scaleX {
+  0% {
+    transform: scaleX(1);
+  }
+  50% {
+    transform: scaleX(1.05);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+ 
+/* PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE PRZYCISK ZAPISZ SIE */
+    /* .footer-left button {
         background: transparent;
         font-family: "Gilda Display";
         border: 1px solid #FFF;;
@@ -82,7 +191,7 @@ import ytIcon from '../assets/yt_icon.svg';
         font-size: 20px;
         cursor: pointer;
         margin-left: 20px;
-    }
+    } */
 
     .footer-right {
         height: 78%;
@@ -155,13 +264,13 @@ import ytIcon from '../assets/yt_icon.svg';
         .footer-left input {
             width: 44%;
         }
-        .footer-left button {
+        /* .footer-left button {
             padding: 3.5vw 7vw;
             margin-left: 0;
             float: right;
             font-size: 4vw;
             margin-top: 2.3vw;
-        }
+        } */
 
     /* footer - dolacz do nas Mobile */
         .footer-right {
