--- a/src/components/en_components/Posluchaj_cmpnt.astro
+++ b/src/components/en_components/Posluchaj_cmpnt.astro
@@ -49,7 +49,7 @@ import { ViewTransitions } from "astro:transitions";
         </div>
     </div>
 </div>
-<Footer/>
+<Footer animate:persist/>
 
 <style>
 
