dzialajacy lenis na en index

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -6,8 +6,29 @@ import Wydarzenia from '../../components/en_components/Wydarzenia.astro'
 import kalendarzPicMain from '../../assets/kalendarz-pic-main.png'
 import secondPhotoMain from '../../assets/second-photo-main.png'
 import Footer from '../../components/en_components/Footer.astro'
+import Lenis from 'lenis';
 ---
+<script>
+	import Lenis from "lenis"
 
+    const lenis = new Lenis()
+
+
+
+    function raf(time: number) {
+
+      lenis.raf(time)
+
+      requestAnimationFrame(raf)
+
+    }
+
+
+
+    requestAnimationFrame(raf)
+
+
+</script>
 <Layout>
 	<div id="fantastica-glowna">
 		<Glowna_cmpnt3 />
@@ -411,21 +432,5 @@ import Footer from '../../components/en_components/Footer.astro'
 		}
 		}
 	</style>
-	<script>
-			import Lenis from "lenis"
 
-			const lenis = new Lenis({ lerp: 0.9 });
-
-			//get scroll value
-			lenis.on("scroll", (e) => {
-				console.log(e);
-			});
-
-			function raf(time: number) {
-				lenis.raf(time);
-				requestAnimationFrame(raf);
-			}
-
-			requestAnimationFrame(raf);
-	</script>
 </Layout>
